--- a/index.html
+++ b/index.html
@@ -192,7 +192,6 @@
             </div>
         </nav>
         
-
         <div id="img_slide">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -220,6 +219,7 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+        </div>
 
         <div id="chart">
             <p>인기 검색어</p>
@@ -712,27 +712,27 @@
                 <div class="event-pic-frame">
                     <div class="event-pic ev1">
                         <a href="html/more_page/event.html">
-                            <img src="img/event_img1.jpg" alt="가을추천이벤트 사진">
+                            <img src="img/event_img1.jpg" alt="카톡이벤트 사진">
                         </a>
                     </div>
                     <div class="event-pic ev2 ">
                         <a href="html/more_page/event.html">
-                            <img src="img/event_img2.jpg" alt="여수이벤트 사진">
+                            <img src="img/event_img2.jpg" alt="당일출고 사진">
                         </a>
                     </div>
                     <div class="event-pic ev3">
                         <a href="html/more_page/event.html">
-                            <img src="img/event_img3.jpg" alt="일본이벤트 사진">
+                            <img src="img/event_img3.jpg" alt="가성비 갑 사진">
                         </a>
                     </div>
                     <div class="event-pic ev4">
                         <a href="html/more_page/event.html">
-                            <img src="img/event_img4.jpg" alt="제휴할인이벤트 사진">
+                            <img src="img/event_img4.jpg" alt="목관리 사진">
                         </a>
                     </div>
                     <div class="event-pic ev5">
                         <a href="html/more_page/event.html">
-                            <img src="img/event_img5.jpg" alt="펜션이벤트 사진">
+                            <img src="img/event_img5.jpg" alt="다이어트 사진">
                         </a>
                     </div>
                 </div>
@@ -740,8 +740,107 @@
         </div>
         <!-- // Event -->
 
+        <!-- review -->
+        <div id="review_area">
+            <div class="review">
+                <div class="review_top">
+                    <p><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></p>
+                    <h2>베스트 리뷰</h2>
+                    <p>고객님들께서 남겨주신 베스트리뷰 보고가세요!</p>
+                    <span>더보기</span>
+                </div>
+
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card">
+                            <img src="img/review.jpg" class="card-img-top" alt="베스트 리뷰">
+                            <div class="card-body">
+                                <h5 class="card-title">tkd*** &nbsp; 2023-04-14</h5>
+                                <p class="card-text">바라만보아도 행복합니다^^</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="img/review.jpg" class="card-img-top" alt="베스트 리뷰">
+                            <div class="card-body">
+                                <h5 class="card-title">tkd***06 &nbsp; 2023-04-16</h5>
+                                <p class="card-text">생각보다 배송이 빠릅니다.감사합니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="img/review.jpg" class="card-img-top" alt="베스트 리뷰">
+                            <div class="card-body">
+                                <h5 class="card-title">tkd***06 &nbsp; 2023-04-19</h5>
+                                <p class="card-text">잘 받아서 잘 먹고 있습니다~~^^
+                                    배송도 빠르고, 안전하게 배송 잘 왔네요~~^^
+                                    다음에  또 주문 할께요~~^^</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- // review -->
+
+        <footer id="footer">
+            <div id="footer_wrap">
+                <div id="footer_inner_left">
+                    <h3>고객센터</h3>
+                    <p>000-0000-0000</p>
+                    <div class="info">
+                        <p>평일상담 : 09:00 ~ 18:00 / 점심시간 : 12:00 ~ 13:00</p>
+                        <p><span>토요일, 일요일 및 법정공휴일은 휴무</span>입니다.</p>
+                        <p><span>근무시간 외의 상담은 카카오톡 또는 게시판</span>에 남겨주시면</p>
+                        <p>순차적으로 답변 드리겠습니다.</p>
+                        <p>이메일 : help@cosmik.jp</p>
+                    </div>
+                    <div class="container text-center sns_icon">
+                        <div class="row">
+                            <div class="col">
+                                <img src="img/카카오톡.png" alt="카카오톡 바로가기">
+                            </div>
+                            <div class="col">
+                                <img src="img/insta.png" alt="인스타 바로가기">
+                            </div>
+                            <div class="col">
+                                <img src="img/blog.png" alt="블로그 바로가기">
+                            </div>
+                            <div class="col">
+                                <img src="img/facebook.png" alt="페이스북 바로가기">
+                            </div>
+                            <div class="col">
+                                <img src="img/유튜브.png" alt="유튜브 바로가기">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="footer_inner_right">
+                    <div>
+                        <p>HOME</p>
+                        <p>회사소개</p>
+                        <p>이용약관</p>
+                        <p>고객센터</p>
+                    </div>
+                    <p>상호명 : MIK JAPAN Co., Ltd.</p>
+                    <p>사업장주소 : 〒535-0012 大阪市旭区千林2-11-24 &nbsp; MIK千林ビル3階</p>
+                    <p>Copyright ⓒ 2014 MIK JAPAN all Rights Reserved.</p>
+                    <div>
+                        <h3>공지사항 <span>더보기</span></h3>
+                        <p>배송비 이벤트</p>
+                        <p>3월 1주차 이벤트</p>
+                        <p>3월 2주차 이벤트</p>
+                        <p>3월 3주차 이벤트</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
         <!--
-         슬라이드 html 클래스명은 변경하면 안 됨
+        슬라이드 html 클래스명은 변경하면 안 됨
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide"><img src="img/slide_img01.PNG" alt="테스트"></div>
@@ -761,8 +860,7 @@
             페이징
             <div class="swiper-pagination"></div>
         </div>
-        // 슬라이드 html 
-    -->
+        // 슬라이드 html -->
     </div>
     <!-- // wrap -->
 
