--- a/index.html
+++ b/index.html
@@ -906,6 +906,34 @@
             </div>
         </footer>
 
+        <div id="side_bar">
+            <p>
+                <a href="#">
+                    <img src="img/side_bar_img.png" alt="개인통관번호">
+                </a>
+            </p>
+            <p>
+                <a href="#">
+                    <img src="img/side_bar_QnA.png" alt="자주하는 질문">
+                </a>
+            </p>
+            <p>
+                <a href="#">
+                    <img src="img/side_bar_center.png" alt="고객센터">
+                </a>
+            </p>
+            <p>
+                <a href="#">
+                    <img src="img/side_bar_shipping.png" alt="배송조회">
+                </a>
+            </p>
+            <p>
+                <a href="#">
+                    <img src="img/side_bar_basket.png" alt="장바구니">
+                </a>
+            </p>
+        </div>
+
         <!--
         슬라이드 html 클래스명은 변경하면 안 됨
         <div class="swiper-container">
