--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="js/moving.js"></script>
 
-    <!-- 헤더 css -->
+    <!-- 헤더,푸터 공통 css -->
     <link rel="stylesheet" href="css/common_top_area.css">
 
     <!-- 메인 css -->
@@ -32,6 +32,8 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/menu_hover.js"></script>
 
+    <!-- 파비콘 -->
+    <link rel="icon" href="img/logo.ico">
 </head>
 <body>
     <!-- wrap -->
@@ -54,13 +56,19 @@
             <div class="right_header">
                 <div>
                     <p>
-                        로그인
+                        <a href="sign_in.html">
+                            로그인
+                        </a>
                     </p>
                     <p>
-                        회원가입
+                        <a href="sign_up.html">
+                            회원가입
+                        </a>
                     </p>
                     <p>
-                        고객센터
+                        <a href="customer_center.html">
+                            고객센터
+                        </a>
                     </p>
                 </div>
                 <div id="img_ball">
