--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
     
         <div id="logo_area">
             <div class="logo">
-                <img src="img/logo.png" alt="cosmik logo">
+                <a href="index.html">
+                    <img src="img/logo.png" alt="cosmik logo">
+                </a>
             </div>
     
             <div class="search">
