--- a/header.footer.html
+++ b/header.footer.html
@@ -72,7 +72,9 @@
     
         <div id="logo_area">
             <div class="logo">
-                <img src="img/logo.png" alt="cosmik logo">
+                <a href="index.html">
+                    <img src="img/logo.png" alt="cosmik logo">
+                </a>
             </div>
     
             <div class="search">
