공통html분리, 사이드바 상단이동js

--- a/header.html
+++ b/header.html
@@ -18,7 +18,7 @@
 
 
 <body>
-    <header id="header_area">
+    <header id="header_area"  style="width: 1130px; margin: 0 auto;">
         <div class="left_header">
             <div class="since">
                 <div id="facebook">
