--- a/sign_in.html
+++ b/sign_in.html
@@ -14,16 +14,18 @@
     <!-- 폰트 -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     
-    <!-- 헤더 말풍선, 검색어 -->
+    <!-- 헤더 말풍선 -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="js/moving.js"></script>
+    <script type="text/javascript" src="js/common/moving.js"></script>
 
     <!-- 헤더,푸터 공통 css -->
-    <link rel="stylesheet" href="css/common_top_area.css">
+    <link rel="stylesheet" href="css/common/common.css">
+    <link rel="stylesheet" href="css/common/header.css">
+    <link rel="stylesheet" href="css/common/footer.css">
 
     <!-- 햄버거 메뉴 호버시 -->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/menu_hover.js"></script>
+    <script src="js/common/jquery-3.6.0.min.js"></script>
+    <script src="js/common/menu_hover.js"></script>
 
     <!-- 파비콘 -->
     <link rel="icon" href="img/logo.ico">
@@ -431,8 +433,15 @@
                     <img src="img/side_bar_basket.png" alt="장바구니">
                 </a>
             </p>
+            <p>
+                <a>
+                    <i id="btnScrollToTop" class="bi bi-arrow-up-circle"></i>
+                </a>
+            </p>
         </div>
     </div>
     <!-- // wrap -->
+    <!-- 사이드바 상단버튼 클릭시 이동 -->
+    <script src="js/common/scroll_top.js"></script>
 </body>
 </html>
