--- a/sign_up.html
+++ b/sign_up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로그인창</title>
+    <title>회원가입</title>
 
     <!-- 부트스트랩 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -271,9 +271,9 @@
         <!-- 회원가입 -->
         <div id="sign_up_area">
             <div id="sign_up_top">
-                <p>
+                <h3>
                     회원가입
-                </p>
+                </h3>
 
                 <p>
                     <span><img src="img/home_icon.gif" alt="home 아이콘"></span>
@@ -285,9 +285,9 @@
             </div>
 
             <div id="sign_up_bottom">
-                <div id="info_title">
+                <h4 id="info_title">
                     필수정보
-                </div>
+                </h4>
                 <div id="info_content">
                     <table>
                         <tr class="id">
@@ -348,8 +348,10 @@
                                     </button>
                                 </a>
                                 <p>
-                                    <input type="checkbox">
-                                    이메일을 통한 광고 및 이벤트 정보 수신
+                                    <label>
+                                        <input type="checkbox">
+                                        이메일을 통한 광고 및 이벤트 정보 수신
+                                    </label>
                                 </p>
                             </td>
                         </tr>
@@ -370,8 +372,10 @@
                                 -
                                 <input type="text" maxlength="4">
                                 <p>
-                                    <input type="checkbox">
-                                    이메일을 통한 광고 및 이벤트 정보 수신
+                                    <label>
+                                        <input type="checkbox">
+                                        이메일을 통한 광고 및 이벤트 정보 수신
+                                    </label>
                                 </p>
                             </td>
                         </tr>
@@ -386,13 +390,56 @@
                         <tr class="male">
                             <td>성별</td>
                             <td>
-                                <input type="radio">남자
-                                <input type="radio">여자
+                                <label>
+                                    <input type="radio" name="gender" value="male"> 남성
+                                </label>
+                                <label>
+                                    <input type="radio" name="gender" value="female"> 여성
+                                </label>
                             </td>
                         </tr>
                     </table>
                 </div>
             </div>
+
+            <!-- 선택사항 -->
+            <div id="choice_info">
+                <h4>
+                    선택사항
+                </h4>
+                <table>
+                    <tr class="address">
+                        <td>주소</td>
+                        <td>
+                            <input type="text">
+                            <a href="#">
+                                <button>
+                                    우편번호 찾기
+                                </button>
+                            </a>
+                            <div>
+                                <input type="text">
+                                <input type="text">
+                                <label>
+                                    <input type="checkbox">해외주소
+                                </label>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <!-- 회원가입 버튼 -->
+            <div id="login_btn">
+                <a href="#">
+                    <button>회원가입</button>
+                </a>
+
+                <a href="#">
+                    <button>다시입력</button>
+                </a>
+            </div>
+
         </div>
         <!-- // 회원가입 -->
 
